@startuml

title __SERVICES's Class Diagram__\n

  namespace  {
    namespace om.example.projetmediatek {
      namespace services {
        class com.example.projetmediatek.services.AjoutDocument {
            {static} - serialVersionUID : long
            + AjoutDocument()
            # doGet()
            # doPost()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.projetmediatek {
      namespace services {
        class com.example.projetmediatek.services.Authentification {
            {static} - serialVersionUID : long
            + Authentification()
            # doGet()
            # doPost()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.projetmediatek {
      namespace services {
        class com.example.projetmediatek.services.Deconnexion {
            {static} - serialVersionUID : long
            + Deconnexion()
            # doGet()
            # doPost()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.projetmediatek {
      namespace services {
        class com.example.projetmediatek.services.EmpruntDocument {
            {static} - serialVersionUID : long
            + EmpruntDocument()
            # doGet()
            # doPost()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.projetmediatek {
      namespace services {
        class com.example.projetmediatek.services.RetourDocument {
            {static} - serialVersionUID : long
            + RetourDocument()
            # doGet()
            # doPost()
        }
      }
    }
  }
  

  com.example.projetmediatek.services.AjoutDocument -up-|> javax.servlet.http.HttpServlet
  com.example.projetmediatek.services.Authentification -up-|> javax.servlet.http.HttpServlet
  com.example.projetmediatek.services.Deconnexion -up-|> javax.servlet.http.HttpServlet
  com.example.projetmediatek.services.EmpruntDocument -up-|> javax.servlet.http.HttpServlet
  com.example.projetmediatek.services.RetourDocument -up-|> javax.servlet.http.HttpServlet


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
